<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaborApp</string>

    <string name="nombre_restaurante">Pollería El Buen Sabor</string>

    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>

    <string name="error_usuario">Ingrese su usuario</string>
    <string name="error_contrasena">Ingrese su contraseña</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>

    <string name="bienvenido_saborapp">Bienvenido a SaborApp</string>
    <string name="selecciona_opcion">Selecciona una opción</string>

    <string name="platos">Platos</string>
    <string name="mesas">Mesas</string>
    <string name="pedidos">Pedidos</string>
    <string name="reportes">Reportes</string>
    <string name="salir">Salir</string>

    <string name="titulo_platos">Platos</string>
    <string name="descripcion_platos">Aquí se administrarán los platos del restaurante.</string>

    <string name="titulo_mesas">Mesas</string>
    <string name="descripcion_mesas">Aquí se administrarán las mesas del restaurante.</string>

    <string name="titulo_pedidos">Pedidos</string>
    <string name="descripcion_pedidos">Aquí se registrarán los pedidos por mesa.</string>

    <string name="titulo_reportes">Reportes</string>
    <string name="descripcion_reportes">Aquí se mostrarán los reportes de ventas.</string>

</resources>